task sidebar overflow bugfix

--- a/src/app/components/sidebar/sidebar.scss
+++ b/src/app/components/sidebar/sidebar.scss
@@ -254,7 +254,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  max-height: calc(100vh - 238px);
+  max-height: calc(100vh - 410px);
   .side-scroll-list-head {
     height: 32px;
     flex: none;
